# OpenRTC

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release-please.yml
deploy/k8s/: admin.yaml  configmap.yaml  ingress.yaml  namespace.yaml  redis.yaml  runtime.yaml
docs/: sdk-removal.md
docs/config/: config-v1.md  env-mapping-v1.md  openrtc.config.example.json  openrtc.config.schema.json
docs/contracts/: error-codes.v1.json  errors-and-limits-v1.md
docs/deployment/: quickstart.md
docs/engineering/: README.md  dependency-policy.md  security-and-observability.md  tooling-and-ci.md
docs/engineering/languages/: go.md  (+2 more)
docs/operations/: incident-checklist.md  runbook.md
docs/protocol/: v1.md
docs/release/: versioning-and-releases.md
reference-app/: README.md  go.mod
reference-app/static/: index.html
scripts/: lint.sh  test-integration.sh  test.sh  typecheck.sh
sdk-go/: go.mod  publisher.go  publisher_test.go
sdk-python/: README.md  pyproject.toml
sdk-python/src/openrtc_publisher/: __init__.py  publisher.py
sdk-python/tests/: test_smoke.py
sdk-ts/: package.json
sdk-ts/src/: admin.ts  client.ts  index.ts
server/: Dockerfile  go.mod  go.sum  package.json
server/integration/: cluster_hardening_test.go  hardening_test.go  multiclient_test.go  runtime_integration_test.go
server/src/: config.ts  errors.ts  index.ts  protocol.ts
testdata/contracts/: error-response.json  publish-request.json
(+25 files in other folders)
